--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,26 +10,45 @@
     <link rel="shortcut icon" href="./assets/imgs/favicon-32x32.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <main>
-        <div><img src="./assets/imgs/illustration-hero.svg" alt=""></div>
-        <div>
-            <h1>Order Summary</h1>
-            
-            <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! </p>
-            
+    <main class="main-content">
+        <section>
             <div>
-                    <img src="./assets/imgs/icon-music.svg" alt="">
-                <h2>Annual Plan</h2>
-                <p>$59.99/year</p>
-                <p>Change</p>
+                <img src="./assets/imgs/illustration-hero.svg" alt="" class="hero-img">
             </div>
-            <button>Proceed to Payment</button>
-            <p>Cancel Order</p>
-        </div>
+            <h1 class="main-title">Order Summary</h1>
+
+            <p class="paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any device
+                anywhere you like! </p>
+            <div class="container-digital-signature">
+
+                <div>
+                    <img src="./assets/imgs/icon-music.svg" alt="" class="music-icon">
+                </div>
+
+                <div class="container-price default">
+                    <h2 class="secundary-title">Annual Plan</h2>
+                    <p>$59.99/year</p>
+                </div>
+                <div>
+                    <p>Change</p>
+                </div>
+            </div>
+
+            <div class="container-proceed-to-payment default">
+                <button>Proceed to Payment</button>
+                <p>Cancel Order</p>
+            </div>
+        </section>
     </main>
-<footer><p>Challenge by <a href="https://www.frontendmentor.io/" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/NataliTrindade" target="_blank">Nataí Trindade</a>.</p></footer>
+    <footer class="footer default">
+        <p>Challenge by <a href="https://www.frontendmentor.io/" target="_blank">Frontend Mentor</a>. Coded by <a
+                href="https://github.com/NataliTrindade" target="_blank">Nataí Trindade</a>.</p>
+    </footer>
 </body>
+
 </html>
