--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="container-price default">
-                    <h2 class="secundary-title">Annual Plan</h2>
+                    <h2>Annual Plan</h2>
                     <p>$59.99/year</p>
                 </div>
                 <div>
