--- a/index.html
+++ b/index.html
@@ -1,54 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge | Order Summary Component</title>
-    <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="shortcut icon" href="./assets/imgs/favicon-32x32.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
-        rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link
+      rel="shortcut icon"
+      href="./assets/imgs/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body class="default default-two">
     <main class="main-content">
-        <section>
-            <div>
-                <img src="./assets/imgs/illustration-hero.svg" alt="" class="hero-img">
-            </div>
-            <h1 class="main-title">Order Summary</h1>
+      <div>
+        <img
+          src="./assets/imgs/illustration-hero.svg"
+          alt=""
+          class="hero-img"
+        />
+      </div>
 
-            <p class="paragraph">You can now listen to millions of songs, audiobooks, and podcasts on any device
-                anywhere you like! </p>
-            <div class="container-digital-signature">
+      <div>
+        <h1 class="main-title">Order Summary</h1>
+        <p class="paragraph">
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
+        </p>
+        <div class="container-digital-signature">
+          <div>
+            <img src="./assets/imgs/icon-music.svg" alt="" class="music-icon" />
+          </div>
+          <div class="container-price default">
+            <h2>Annual Plan</h2>
+            <p>$59.99/year</p>
+          </div>
+          <div>
+            <p>Change</p>
+          </div>
+        </div>
+      </div>
 
-                <div>
-                    <img src="./assets/imgs/icon-music.svg" alt="" class="music-icon">
-                </div>
-
-                <div class="container-price default">
-                    <h2>Annual Plan</h2>
-                    <p>$59.99/year</p>
-                </div>
-                <div>
-                    <p>Change</p>
-                </div>
-            </div>
-
-            <div class="container-proceed-to-payment default">
-                <button>Proceed to Payment</button>
-                <p>Cancel Order</p>
-            </div>
-        </section>
+      <div class="container-proceed-to-payment default">
+        <button>Proceed to Payment</button>
+        <p>Cancel Order</p>
+      </div>
     </main>
     <footer class="footer default">
-        <p>Challenge by <a href="https://www.frontendmentor.io/" target="_blank">Frontend Mentor</a>. Coded by <a
-                href="https://github.com/NataliTrindade" target="_blank">Nataí Trindade</a>.</p>
+      <p>
+        Challenge by
+        <a href="https://www.frontendmentor.io/" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/NataliTrindade" target="_blank"
+          >Nataí Trindade</a
+        >.
+      </p>
     </footer>
-</body>
-
+  </body>
 </html>
